--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
-.btn{
+.btn2{
     background-color: rgb(224, 218, 206);
-    border-radius: "25px";
+    margin: 10px;
+    padding: 3px 8px;
+    border-radius: 5px;
 }
 
-.btn:hover{
+.btn2:hover{
     background-color: rgba(7, 1, 1, 0.541);
 }
